force-app/main/default/objects/Drawing__c/Drawing__c.object-meta.xml
<CustomObject>
    <label>Drawing</label>
    <nameField>
        <displayFormat>DRAW-{00000}</displayFormat>
        <label>Drawing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drawings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>