force-app/main/default/objects/Drawing__c/fields/Depth__c.field-meta.xml
<CustomField>
    <fullName>Depth__c</fullName>
    <label>Depth (in)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>