force-app/main/default/objects/Drawing__c/fields/Design_Request__c.field-meta.xml
<CustomField>
    <fullName>Design_Request__c</fullName>
    <label>Design Request</label>
    <referenceTo>Design_Request__c</referenceTo>
    <relationshipLabel>Drawings</relationshipLabel>
    <relationshipName>Drawings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>