force-app/main/default/objects/Drawing__c/fields/Drawing_Detail__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Detail__c</fullName>
    <formula>TEXT(Drawing_Type__c) &amp;
IF( TEXT(Drawing_Type__c) = &quot;Other&quot;,
 &quot; (&quot; &amp; Other_Drawing_Type__c &amp; &quot;)&quot; , &quot;&quot;)
&amp; &quot; - &quot; &amp;
TEXT(Material__c) &amp;
IF( TEXT(Material__c) = &quot;Other&quot;,
 &quot; (&quot; &amp;  Other_Material__c &amp; &quot;)&quot; , &quot;&quot;)
&amp; &quot; - &quot; &amp;
 TEXT(Length__c) &amp; &quot; x &quot; &amp; TEXT(Width__c) &amp; &quot; x &quot; &amp; TEXT(Depth__c) &amp;
IF( Pallet_Analysis_Report__c ,
 &quot; - Pallet (&quot; &amp; TEXT(Pallet_Width__c) &amp; &quot; x &quot; &amp; TEXT(Pallet_Length__c) &amp; &quot; x &quot; &amp; TEXT(Pallet_Max_Height__c) &amp; &quot; - &quot; &amp; IF(TEXT(Container_Type__c) = &quot;Other&quot;,  Other_Container_Type__c , TEXT(Container_Type__c) ) &amp; &quot;)&quot; , &quot;&quot; )</formula>
    <label>Drawing Detail</label>
    <type>Text</type>
</CustomField>