force-app/main/default/objects/Drawing__c/fields/Drawing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Notes__c</fullName>
    <label>Drawing Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>