force-app/main/default/objects/Drawing__c/fields/Drawing_Type__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Type__c</fullName>
    <label>Drawing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RSC</fullName>
            </value>
            <value>
                <fullName>HSC</fullName>
            </value>
            <value>
                <fullName>PAD</fullName>
            </value>
            <value>
                <fullName>5PF</fullName>
            </value>
            <value>
                <fullName>FOL</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>