force-app/main/default/objects/Drawing__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>32 ECT E Flute MW2S</fullName>
            </value>
            <value>
                <fullName>32 ECT E Flute Kraft</fullName>
            </value>
            <value>
                <fullName>32 ECT B Flute Kraft</fullName>
            </value>
            <value>
                <fullName>32 ECT B Flute MW1S</fullName>
            </value>
            <value>
                <fullName>32 ECT C Flute Kraft</fullName>
            </value>
            <value>
                <fullName>44 ECT C Flute Kraft</fullName>
            </value>
            <value>
                <fullName>51 ECT BC Flute Kraft</fullName>
            </value>
            <value>
                <fullName>Folding Carton</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>