force-app/main/default/objects/Drawing__c/fields/Other_Container_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Container_Type__c</fullName>
    <label>Other Container Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>