force-app/main/default/objects/Drawing__c/fields/Other_Drawing_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Drawing_Type__c</fullName>
    <label>Other Drawing Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>