force-app/main/default/objects/Drawing__c/fields/Other_Material__c.field-meta.xml
<CustomField>
    <fullName>Other_Material__c</fullName>
    <label>Other Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>