force-app/main/default/objects/Drawing__c/fields/Pallet_Analysis_Report__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Analysis_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pallet Analysis Report</label>
    <type>Checkbox</type>
</CustomField>