force-app/main/default/objects/Drawing__c/fields/Pallet_Max_Height__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Max_Height__c</fullName>
    <label>Pallet Max Height</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>