force-app/main/default/objects/Drawing__c/fields/Pallet_Width__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Width__c</fullName>
    <label>Pallet Width</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>