force-app/main/default/objects/Drawing__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <label>Width (in)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>